# solana-data-aggregator

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: health_tracking_adapter.rs  mod.rs
src/adapters/api/: server.rs
src/adapters/api/handlers/: accounts.rs  mod.rs  transactions.rs  ws.rs
src/adapters/api/models/: api_response.rs
src/adapters/blockchain/: mod.rs  solana_client.rs  solana_stream.rs  transaction_parser.rs
src/adapters/storage/: memory_storage.rs  mod.rs
src/bootstrap/: mod.rs  setup.rs
src/config/: config.toml  mod.rs
src/core/domain/: account.rs  transaction.rs
src/core/ports/: blockchain.rs  mod.rs  runner.rs  storage.rs
src/core/services/: health_reporter_service.rs  mod.rs  rpc_ingestion_service.rs
src/messaging/: event_listener.rs  mod.rs
src/metrics/: connection_health_tracker.rs  mod.rs
src/utils/: error.rs  logger.rs  mod.rs  scheduler.rs
tests/: integration_tests.rs
